--- a/Battle of the Neighbourhood/Battle of the Neighbourhoods W2.ipynb
+++ b/Battle of the Neighbourhood/Battle of the Neighbourhoods W2.ipynb
@@ -679,8 +679,8 @@
    "outputs": [],
    "source": [
     "#defining Foursquare API credentials\n",
-    "CLIENT_ID = '1G0J0TCQ0VR4A3CPKSYGTQFZWAL3WNYLKCYFQCJB2MQWUHBI' # your Foursquare ID\n",
-    "CLIENT_SECRET = 'JEHA4U1Z1BX3BZIPAYRWRPSV5QMC3S0BHOIEVTI1RZMZFXJZ'  # your Foursquare Secret\n",
+    "CLIENT_ID = 'foursquareID' # your Foursquare ID\n",
+    "CLIENT_SECRET = 'foursquaresecret'  # your Foursquare Secret\n",
     "VERSION = '20180605'  # Foursquare API version\n",
     "LIMIT = 100 # A default Foursquare API limit value"
    ]
